--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --open --config webpack.dev.js",
-    "build:dev": "webpack --config webpack.dll.config.js && webpack --config webpack.dev.js",
-    "build:prod": "webpack --config webpack.dll.config.js && webpack --config webpack.prod.js",
-    "dll": "webpack --config webpack.dll.config.js"
+    "build:dev": "webpack --config webpack.dev.js",
+    "build:prod": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "sideEffects": [
+    "*.css",
+    "*.styl(us)?"
+  ],
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
@@ -20,6 +23,7 @@
     "@babel/preset-react": "^7.6.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.7.1",
@@ -28,13 +32,17 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
-    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
     "html-withimg-loader": "^0.1.16",
+    "inline-manifest-webpack-plugin": "^4.0.2",
+    "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^3.0.0",
+    "px2rem-loader": "^0.1.9",
     "speed-measure-webpack-plugin": "^1.3.1",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^2.2.1",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
@@ -45,11 +53,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.3",
+    "@material-ui/core": "^4.11.4",
     "autoprefixer": "^9.7.2",
+    "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
     "loadsh": "0.0.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2"
   }
 }
