--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,7 @@
     ],
     [
       "@babel/plugin-proposal-class-properties" 
-    ]
-    // ["import", {"libraryName": "antd",  "libraryDirectory": "lib", "style": "css"}]
+    ],
+    ["import", {"libraryName": "antd",  "libraryDirectory": "lib", "style": true}]
   ]
 }
