--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@babel/runtime": "^7.6.3",
-    "@material-ui/core": "^4.11.4",
+    "antd": "^4.15.6",
     "autoprefixer": "^9.7.2",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
