--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,6 @@
     [
       "@babel/plugin-proposal-class-properties" 
     ],
-    ["import", {"libraryName": "antd",  "libraryDirectory": "lib", "style": true}]
+    ["import", {"libraryName": "antd", "style": true}]
   ]
 }
