--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/runtime": "^7.6.3",
     "antd": "^4.15.6",
     "autoprefixer": "^9.7.2",
+    "dayjs": "^1.10.4",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
     "loadsh": "0.0.4",
