--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --config webpack.dev.js",
     "build:dev": "webpack --config webpack.dev.js",
-    "build:prod": "webpack --config webpack.prod.js"
+    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^5.1.3",
     "css-loader": "^3.2.0",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
@@ -40,6 +41,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^3.0.0",
+    "postcss-safe-parser": "^4.0.1",
     "px2rem-loader": "^0.1.9",
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^2.0.0",
@@ -52,14 +54,11 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.6.2",
     "@babel/runtime": "^7.6.3",
     "antd": "^4.15.6",
     "autoprefixer": "^9.7.2",
     "dayjs": "^1.10.4",
     "isomorphic-fetch": "^3.0.0",
-    "jquery": "^3.5.1",
-    "loadsh": "0.0.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.2.4",
